--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ h1 {
 
 section {
     display: flex;
+    margin-bottom: 200px;
+
 }
 
 .half-width {
@@ -38,4 +40,10 @@ section {
     background-image: url(img/top-banner.png);
     background-repeat: no-repeat;
 
+}
+
+.Dream-Big {
+    background-image: url(img/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
